fix save changes button on mobile

--- a/src/Styles/ControlPanel.css
+++ b/src/Styles/ControlPanel.css
@@ -70,3 +70,7 @@
     justify-content: right;
   }
 }
+
+.save-changes-btn {
+  width: 200px;
+}
